#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

nobase_dist_pkgdata_DATA = \
	MANUFACTURERS \
	admtek/adm5120/adm5120 \
	altera/PARTS \
	altera/ep1c20f400/STEPPINGS \
	altera/ep1c20f400/ep1c20f400 \
	altera/ep1c6q240/ep1c6q240 \
	altera/epm7128aetc100/STEPPINGS \
	altera/epm7128aetc100/epm7128aetc100 \
	altera/ep1c12/STEPPINGS \
	altera/ep1c12/ep1c12 \
	altera/ep1c12/f256 \
	altera/ep1c12/f324 \
	altera/ep1c12/q240 \
	altera/ep2c8/STEPPINGS \
	altera/ep2c8/ep2c8 \
	altera/ep2c8/f256 \
	altera/ep2c8/q208 \
	altera/ep2c8/t144 \
	altera/epm3064a/STEPPINGS \
	altera/epm3064a/epm3064a \
	altera/epm3064a/l44 \
	altera/epm3064a/t100 \
	altera/epm3064a/t44 \
	atheros/ar2312/ar2312 \
	atmel/PARTS \
	atmel/atmega128/STEPPINGS \
	atmel/atmega128/atmega128 \
	atmel/at91sam7s256/STEPPINGS \
	atmel/at91sam7s256/at91sam7s_tq64v0 \
	atmel/at91sam7s256/at91sam7s_tq48v0 \
	analog/PARTS \
	analog/bf533/STEPPINGS \
	analog/bf533/bf533 \
	analog/bf537/STEPPINGS \
	analog/bf537/bf537 \
	analog/bf549/STEPPINGS \
	analog/bf549/bf549 \
	analog/bf561/STEPPINGS \
	analog/bf561/bf561 \
	analog/PARTS \
	analog/sharc21065l/STEPPINGS \
	analog/sharc21065l/sharc21065l \
	brecis/PARTS \
	brecis/msp2006/STEPPINGS \
	brecis/msp2006/msp2006 \
	broadcom/PARTS \
	broadcom/bcm1250/STEPPINGS \
	broadcom/bcm1250/bcm1250 \
	broadcom/bcm3310/STEPPINGS \
	broadcom/bcm3310/bcm3310 \
	broadcom/bcm4712/STEPPINGS \
	broadcom/bcm4712/bcm4712 \
	broadcom/bcm5421s/STEPPINGS \
	broadcom/bcm5421s/bcm5421s \
	bsdl/STD_1149_1_1990 \
	bsdl/STD_1149_1_1994 \
	dec/PARTS \
	dec/sa1100/STEPPINGS \
	dec/sa1100/sa1100 \
	hitachi/PARTS \
	hitachi/ar7300/STEPPINGS \
	hitachi/ar7300/ar7300 \
	hitachi/hd64465/hd64465 \
	hitachi/sh7727/STEPPINGS \
	hitachi/sh7727/sh7727 \
	hitachi/sh7729/STEPPINGS \
	hitachi/sh7729/sh7729 \
	freescale/PARTS \
	freescale/mpc5200/STEPPINGS \
	freescale/mpc5200/mpc5200 \
	ibm/PARTS \
	ibm/ppc440gx/STEPPINGS \
	ibm/ppc440gx/ppc440gx \
	ibm/ppc405ep/STEPPINGS \
	ibm/ppc405ep/ppc405ep \
	intel/PARTS \
	intel/pxa250/STEPPINGS \
	intel/pxa250/pxa250 \
	intel/pxa250/pxa250c0 \
	intel/pxa270/STEPPINGS \
	intel/pxa270/pxa270 \
	intel/sa1110/STEPPINGS \
	intel/sa1110/sa1110 \
	intel/ixp425/STEPPINGS \
	intel/ixp425/ixp425 \
	lattice/PARTS \
	lattice/lc4032v-tqfp48/STEPPINGS \
	lattice/lc4032v-tqfp48/lc4032v-tqfp48 \
	lattice/lc4128c-tqfp100/STEPPINGS \
	lattice/lc4128c-tqfp100/lc4128c-tqfp100 \
	lattice/m4a3-256.192-fpbga256/STEPPINGS \
	lattice/m4a3-256.192-fpbga256/m4a3-256.192-fpbga256 \
	lattice/m4a3-64.32-tqfp48/STEPPINGS \
	lattice/m4a3-64.32-tqfp48/m4a3-64.32-tqfp48 \
	lexra/PARTS \
	lexra/lx5280/STEPPINGS \
	lexra/lx5280/lx5280 \
	motorola/mpc8245/1.2 \
	philips/PARTS \
	philips/xcr3128xl-cs144/STEPPINGS \
	philips/xcr3128xl-cs144/xcr3128xl-cs144 \
	philips/xcr3128xl-vq100/STEPPINGS \
	philips/xcr3128xl-vq100/xcr3128xl-vq100 \
	samsung/s3c4510b/s3c4510b \
	sharp/PARTS \
	sharp/lh7a400/STEPPINGS \
	sharp/lh7a400/lh7a400 \
	toshiba/PARTS \
	toshiba/tx4925/STEPPINGS \
	toshiba/tx4925/tx4925 \
	toshiba/tx4926/STEPPINGS \
	toshiba/tx4926/tx4926 \
	xilinx/PARTS \
	xilinx/xc18v04pc44/xc18v04pc44 \
	xilinx/xc18v04pc44/STEPPINGS \
	xilinx/xc2c256-tq144/STEPPINGS \
	xilinx/xc2c256-tq144/xc2c256-tq144 \
	xilinx/xc2c256-vq100/STEPPINGS \
	xilinx/xc2c256-vq100/xc2c256-vq100 \
	xilinx/xc2c64a-vq44/STEPPINGS \
	xilinx/xc2c64a-vq44/xc2c64a-vq44 \
	xilinx/xc2s200e-pq208/STEPPINGS \
	xilinx/xc2s200e-pq208/xc2s200e-pq208 \
	xilinx/xc2s300e/STEPPINGS \
	xilinx/xc2s300e/xc2s300e \
	xilinx/xc2v80-fg256/STEPPINGS \
	xilinx/xc2v80-fg256/xc2v80-fg256 \
	xilinx/xc2v250-fg256/STEPPINGS \
	xilinx/xc2v250-fg256/xc2v250-fg256 \
	xilinx/xc2v1000-fg256/STEPPINGS \
	xilinx/xc2v1000-fg256/xc2v1000-fg256 \
	xilinx/xc2s300e/pq208 \
	xilinx/xc2s300e/ft256 \
	xilinx/xc2s300e/fg456 \
	xilinx/xc3s1000/fg676 \
	xilinx/xc3s1000/xc3s1000 \
	xilinx/xc3s1000/fg320 \
	xilinx/xc3s1000/ft256 \
	xilinx/xc3s1000/STEPPINGS \
	xilinx/xc3s1000/fg456 \
	xilinx/xc3s100e_die/xc3s100e_pq208 \
	xilinx/xc3s100e_die/xc3s100e_tq144 \
	xilinx/xc3s100e_die/xc3s100e_die \
	xilinx/xc3s100e_die/STEPPINGS \
	xilinx/xc3s100e_die/xc3s100e_vq100 \
	xilinx/xc3s1500/xc3s1500_fg456 \
	xilinx/xc3s1500/xc3s1500l_fg676 \
	xilinx/xc3s1500/xc3s1500l \
	xilinx/xc3s1500/xc3s1500l_fg320 \
	xilinx/xc3s1500/xc3s1500_fg676 \
	xilinx/xc3s1500/xc3s1500 \
	xilinx/xc3s1500/xc3s1500_fg320 \
	xilinx/xc3s1500/STEPPINGS \
	xilinx/xc3s1500/xc3s1500l_fg456 \
	xilinx/xc3s200/xc3s200_tq144 \
	xilinx/xc3s200/xc3s200 \
	xilinx/xc3s200/xc3s200_ft256 \
	xilinx/xc3s200/xc3s200_vq100 \
	xilinx/xc3s200/STEPPINGS \
	xilinx/xc3s200/xc3s200_pq208 \
	xilinx/xc3s2000/xc3s2000_fg676 \
	xilinx/xc3s2000/xc3s2000 \
	xilinx/xc3s2000/xc3s2000l_fg900 \
	xilinx/xc3s2000/xc3s2000_fg900 \
	xilinx/xc3s2000/STEPPINGS \
	xilinx/xc3s2000/xc3s2000_fg456 \
	xilinx/xc3s2000/xc3s2000l_fg676 \
	xilinx/xc3s2000/xc3s2000l \
	xilinx/xc3s400/xc3s400_fg456 \
	xilinx/xc3s400/xc3s400_tq144 \
	xilinx/xc3s400/xc3s400 \
	xilinx/xc3s400/xc3s400_fg320 \
	xilinx/xc3s400/xc3s400_ft256 \
	xilinx/xc3s400/STEPPINGS \
	xilinx/xc3s400/xc3s400_pq208 \
	xilinx/xc3s4000/xc3s4000l \
	xilinx/xc3s4000/xc3s4000_fg676 \
	xilinx/xc3s4000/xc3s4000 \
	xilinx/xc3s4000/xc3s4000l_fg900 \
	xilinx/xc3s4000/xc3s4000_fg900 \
	xilinx/xc3s4000/xc3s4000l_fg1156 \
	xilinx/xc3s4000/STEPPINGS \
	xilinx/xc3s4000/xc3s4000_fg1156 \
	xilinx/xc3s50/xc3s50_pq208 \
	xilinx/xc3s50/xc3s50_tq144 \
	xilinx/xc3s50/xc3s50 \
	xilinx/xc3s50/STEPPINGS \
	xilinx/xc3s50/xc3s50_vq100 \
	xilinx/xc3s50/xc3s50_cp132 \
	xilinx/xc3s5000/xc3s5000 \
	xilinx/xc3s5000/xc3s5000_fg900 \
	xilinx/xc3s5000/STEPPINGS \
	xilinx/xc3s5000/xc3s5000_fg1156 \
	xilinx/xc3s500e_fg320/xc3s500e_ft256 \
	xilinx/xc3s500e_fg320/xc3s500e_pq208 \
	xilinx/xc3s500e_fg320/xc3s500e_fg320 \
	xilinx/xc3s500e_fg320/STEPPINGS \
	xilinx/xc9572xl_vq44/xc9572xl_vq44 \
	xilinx/xc9572xl_vq44/STEPPINGS \
	xilinx/xcf04s/xcf04s \
	xilinx/xcf04s/STEPPINGS \
	xilinx/xcr3032xl-vq44/STEPPINGS \
	xilinx/xcr3032xl-vq44/xcr3032xl-vq44 \
	xilinx/xcr3128xl-cs144/STEPPINGS \
	xilinx/xcr3128xl-cs144/xcr3128xl-cs144 \
	xilinx/xcr3128xl-vq100/xcr3128xl-vq100 \
	xilinx/xcr3256xl-ft256/STEPPINGS \
	xilinx/xcr3256xl-ft256/xcr3256xl-ft256
