#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

nobase_dist_pkgdata_DATA = \
	MANUFACTURERS \
	admtek/adm5120/adm5120 \
	altera/PARTS \
	altera/ep1c20f400/STEPPINGS \
	altera/ep1c20f400/ep1c20f400 \
	altera/ep1c6q240/STEPPINGS \
	altera/ep1c6q240/ep1c6q240 \
	altera/epm7128aetc100/STEPPINGS \
	altera/epm7128aetc100/epm7128aetc100 \
	altera/ep1c12/STEPPINGS \
	altera/ep1c12/ep1c12 \
	altera/ep1c12/f256 \
	altera/ep1c12/f324 \
	altera/ep1c12/q240 \
	altera/ep2c8/STEPPINGS \
	altera/ep2c8/ep2c8 \
	altera/ep2c8/f256 \
	altera/ep2c8/q208 \
	altera/ep2c8/t144 \
	altera/epm3064a/STEPPINGS \
	altera/epm3064a/epm3064a \
	altera/epm3064a/l44 \
	altera/epm3064a/t100 \
	altera/epm3064a/t44 \
	atheros/ar2312/ar2312 \
	atmel/PARTS \
	atmel/at32ap7000/STEPPINGS \
	atmel/at32ap7000/at32ap7000 \
	atmel/atmega128/STEPPINGS \
	atmel/atmega128/atmega128 \
	atmel/at91sam7s256/STEPPINGS \
	atmel/at91sam7s256/at91sam7s_tq64v0 \
	atmel/at91sam7s256/at91sam7s_tq48v0 \
	atmel/atf15xx/STEPPINGS \
	atmel/atf15xx/atf1504asv \
	analog/PARTS \
	analog/bfin/bfin \
	analog/bf506/STEPPINGS \
	analog/bf506/bf506 \
	analog/bf518/STEPPINGS \
	analog/bf518/bf518 \
	analog/bf527/STEPPINGS \
	analog/bf527/bf527 \
	analog/bf533/STEPPINGS \
	analog/bf533/bf533 \
	analog/bf537/STEPPINGS \
	analog/bf537/bf537 \
	analog/bf538/STEPPINGS \
	analog/bf538/bf538 \
	analog/bf548/STEPPINGS \
	analog/bf548/bf548 \
	analog/bf561/STEPPINGS \
	analog/bf561/bf561 \
	analog/bf592/STEPPINGS \
	analog/bf592/bf592 \
	analog/sharc21065l/STEPPINGS \
	analog/sharc21065l/sharc21065l \
	analog/sharc21369/STEPPINGS \
	analog/sharc21369/sharc21369 \
	brecis/PARTS \
	brecis/msp2006/STEPPINGS \
	brecis/msp2006/msp2006 \
	broadcom/PARTS \
	broadcom/bcm1250/STEPPINGS \
	broadcom/bcm1250/bcm1250 \
	broadcom/bcm3310/STEPPINGS \
	broadcom/bcm3310/bcm3310 \
	broadcom/bcm4702/STEPPINGS \
	broadcom/bcm4702/bcm4702 \
	broadcom/bcm4712/STEPPINGS \
	broadcom/bcm4712/bcm4712 \
	broadcom/bcm5421s/STEPPINGS \
	broadcom/bcm5421s/bcm5421s \
	broadcom/bcm6348/STEPPINGS \
	broadcom/bcm6348/bcm6348 \
	broadcom/bcm6358/STEPPINGS \
	broadcom/bcm6358/bcm6358 \
	bsdl/STD_1149_1_1990 \
	bsdl/STD_1149_1_1994 \
	bsdl/STD_1149_1_2001 \
	bsdl/STD_1532_2001 \
	bsdl/STD_1532_2002 \
	dec/PARTS \
	dec/sa1100/STEPPINGS \
	dec/sa1100/sa1100 \
	hitachi/PARTS \
	hitachi/ar7300/STEPPINGS \
	hitachi/ar7300/ar7300 \
	hitachi/hd64465/hd64465 \
	hitachi/sh7727/STEPPINGS \
	hitachi/sh7727/sh7727 \
	hitachi/sh7729/STEPPINGS \
	hitachi/sh7729/sh7729 \
	freescale/PARTS \
	freescale/mpc5200/STEPPINGS \
	freescale/mpc5200/mpc5200 \
	freescale/mpc8377/STEPPINGS \
	freescale/mpc8377/mpc8377 \
	freescale/mpc8378/STEPPINGS \
	freescale/mpc8378/mpc8378 \
	freescale/mpc8379/STEPPINGS \
	freescale/mpc8379/mpc8379 \
	ibm/PARTS \
	ibm/ppc440gx/STEPPINGS \
	ibm/ppc440gx/ppc440gx \
	ibm/ppc405ep/STEPPINGS \
	ibm/ppc405ep/ppc405ep \
	intel/PARTS \
	intel/pxa250/STEPPINGS \
	intel/pxa250/pxa250 \
	intel/pxa250/pxa250c0 \
	intel/pxa270/STEPPINGS \
	intel/pxa270/pxa270 \
	intel/sa1110/STEPPINGS \
	intel/sa1110/sa1110 \
	intel/ixp425/STEPPINGS \
	intel/ixp425/ixp425 \
	intel/ixp465/STEPPINGS \
	intel/ixp465/ixp465 \
	lattice/PARTS \
	lattice/lc4032v-tqfp48/STEPPINGS \
	lattice/lc4032v-tqfp48/lc4032v-tqfp48 \
	lattice/lc4064zc/STEPPINGS \
	lattice/lc4064zc/lc4064zc \
	lattice/lc4128c-tqfp100/STEPPINGS \
	lattice/lc4128c-tqfp100/lc4128c-tqfp100 \
	lattice/lfec2-12e/STEPPINGS \
	lattice/lfec2-12e/lfec2-12e \
	lattice/m4a3-256.192-fpbga256/STEPPINGS \
	lattice/m4a3-256.192-fpbga256/m4a3-256.192-fpbga256 \
	lattice/m4a3-64.32-tqfp48/STEPPINGS \
	lattice/m4a3-64.32-tqfp48/m4a3-64.32-tqfp48 \
	lattice/lcmxo2-1200-csbga132/STEPPINGS \
	lattice/lcmxo2-1200-csbga132/lcmxo2-1200-csbga132 \
	lexra/PARTS \
	lexra/lx5280/STEPPINGS \
	lexra/lx5280/lx5280 \
	marvell/PARTS \
	marvell/88e1118/STEPPINGS \
	marvell/88e1118/88e1118 \
	marvell/88f5182/STEPPINGS \
	marvell/88f5182/88f5182-a2 \
	marvell/88w8500/STEPPINGS \
	marvell/88w8500/88w8500-ban \
	motorola/mpc8241/1.2 \
	motorola/mpc8245/1.2 \
	philips/PARTS \
	philips/xcr3128xl-cs144/STEPPINGS \
	philips/xcr3128xl-cs144/xcr3128xl-cs144 \
	philips/xcr3128xl-vq100/STEPPINGS \
	philips/xcr3128xl-vq100/xcr3128xl-vq100 \
	samsung/s3c4510b/s3c4510b \
	sharp/PARTS \
	sharp/lh7a400/STEPPINGS \
	sharp/lh7a400/lh7a400 \
	sigma/PARTS \
	sigma/smp8634/STEPPINGS \
	sigma/smp8634/smp8634 \
	ti/PARTS \
	ti/tnetv1060/STEPPINGS \
	ti/tnetv1060/tnetv1060 \
	ti/tnetv1061/STEPPINGS \
	ti/tnetv1061/tnetv1061 \
	toshiba/PARTS \
	toshiba/tx4925/STEPPINGS \
	toshiba/tx4925/tx4925 \
	toshiba/tx4926/STEPPINGS \
	toshiba/tx4926/tx4926 \
	toshiba/tmpa9xx/STEPPINGS \
	toshiba/tmpa9xx/tmpa9xx \
	xilinx/PARTS \
	xilinx/xc18v02pc44/xc18v02pc44 \
	xilinx/xc18v02pc44/STEPPINGS \
	xilinx/xc18v04pc44/xc18v04pc44 \
	xilinx/xc18v04pc44/STEPPINGS \
	xilinx/xc2c256-tq144/STEPPINGS \
	xilinx/xc2c256-tq144/xc2c256-tq144 \
	xilinx/xc2c256-vq100/STEPPINGS \
	xilinx/xc2c256-vq100/xc2c256-vq100 \
	xilinx/xc2c32a-vq44/STEPPINGS \
	xilinx/xc2c32a-vq44/xc2c32a-vq44 \
	xilinx/xc2c32a-cp56/STEPPINGS \
	xilinx/xc2c32a-cp56/xc2c32a-cp56 \
	xilinx/xc2c32a-cv64/STEPPINGS \
	xilinx/xc2c32a-cv64/xc2c32a-cv64 \
	xilinx/xc2c64a-vq44/STEPPINGS \
	xilinx/xc2c64a-vq44/xc2c64a-vq44 \
	xilinx/xc2s200e-pq208/STEPPINGS \
	xilinx/xc2s200e-pq208/xc2s200e-pq208 \
	xilinx/xc2s300e/STEPPINGS \
	xilinx/xc2s300e/xc2s300e \
	xilinx/xc2v80-fg256/STEPPINGS \
	xilinx/xc2v80-fg256/xc2v80-fg256 \
	xilinx/xc2v250-fg256/STEPPINGS \
	xilinx/xc2v250-fg256/xc2v250-fg256 \
	xilinx/xc2v1000-fg256/STEPPINGS \
	xilinx/xc2v1000-fg256/xc2v1000-fg256 \
	xilinx/xc2s300e/pq208 \
	xilinx/xc2s300e/ft256 \
	xilinx/xc2s300e/fg456 \
	xilinx/xc3s1000/fg676 \
	xilinx/xc3s1000/xc3s1000 \
	xilinx/xc3s1000/fg320 \
	xilinx/xc3s1000/ft256 \
	xilinx/xc3s1000/STEPPINGS \
	xilinx/xc3s1000/fg456 \
	xilinx/xc3s100e_die/xc3s100e_pq208 \
	xilinx/xc3s100e_die/xc3s100e_tq144 \
	xilinx/xc3s100e_die/xc3s100e_die \
	xilinx/xc3s100e_die/STEPPINGS \
	xilinx/xc3s100e_die/xc3s100e_vq100 \
	xilinx/xc3s1600e/STEPPINGS \
	xilinx/xc3s1600e/xc3s1600e \
	xilinx/xc3s1200e_fg320/STEPPINGS \
	xilinx/xc3s1200e_fg320/xc3s1200e_fg320 \
	xilinx/xc3s1500/xc3s1500_fg456 \
	xilinx/xc3s1500/xc3s1500l_fg676 \
	xilinx/xc3s1500/xc3s1500l \
	xilinx/xc3s1500/xc3s1500l_fg320 \
	xilinx/xc3s1500/xc3s1500_fg676 \
	xilinx/xc3s1500/xc3s1500 \
	xilinx/xc3s1500/xc3s1500_fg320 \
	xilinx/xc3s1500/STEPPINGS \
	xilinx/xc3s1500/xc3s1500l_fg456 \
	xilinx/xc3s200/xc3s200_tq144 \
	xilinx/xc3s200/xc3s200 \
	xilinx/xc3s200/xc3s200_ft256 \
	xilinx/xc3s200/xc3s200_vq100 \
	xilinx/xc3s200/STEPPINGS \
	xilinx/xc3s200/xc3s200_pq208 \
	xilinx/xc3s2000/xc3s2000_fg676 \
	xilinx/xc3s2000/xc3s2000 \
	xilinx/xc3s2000/xc3s2000l_fg900 \
	xilinx/xc3s2000/xc3s2000_fg900 \
	xilinx/xc3s2000/STEPPINGS \
	xilinx/xc3s2000/xc3s2000_fg456 \
	xilinx/xc3s2000/xc3s2000l_fg676 \
	xilinx/xc3s2000/xc3s2000l \
	xilinx/xc3s400/xc3s400_fg456 \
	xilinx/xc3s400/xc3s400_tq144 \
	xilinx/xc3s400/xc3s400 \
	xilinx/xc3s400/xc3s400_fg320 \
	xilinx/xc3s400/xc3s400_ft256 \
	xilinx/xc3s400/STEPPINGS \
	xilinx/xc3s400/xc3s400_pq208 \
	xilinx/xc3s4000/xc3s4000l \
	xilinx/xc3s4000/xc3s4000_fg676 \
	xilinx/xc3s4000/xc3s4000 \
	xilinx/xc3s4000/xc3s4000l_fg900 \
	xilinx/xc3s4000/xc3s4000_fg900 \
	xilinx/xc3s4000/xc3s4000l_fg1156 \
	xilinx/xc3s4000/STEPPINGS \
	xilinx/xc3s4000/xc3s4000_fg1156 \
	xilinx/xc3s50/xc3s50_pq208 \
	xilinx/xc3s50/xc3s50_tq144 \
	xilinx/xc3s50/xc3s50 \
	xilinx/xc3s50/STEPPINGS \
	xilinx/xc3s50/xc3s50_vq100 \
	xilinx/xc3s50/xc3s50_cp132 \
	xilinx/xc3s5000/xc3s5000 \
	xilinx/xc3s5000/xc3s5000_fg900 \
	xilinx/xc3s5000/STEPPINGS \
	xilinx/xc3s5000/xc3s5000_fg1156 \
	xilinx/xc3s500e_fg320/xc3s500e_ft256 \
	xilinx/xc3s500e_fg320/xc3s500e_pq208 \
	xilinx/xc3s500e_fg320/xc3s500e_fg320 \
	xilinx/xc3s500e_fg320/STEPPINGS \
	xilinx/xc3s1400a/STEPPINGS \
	xilinx/xc3s1400a/xc3s1400a_ft256 \
	xilinx/xc3s1400a/xc3s1400a \
	xilinx/xc3s1400a/xc3s1400a_fg484 \
	xilinx/xc3s1400a/xc3s1400a_fg676 \
	xilinx/xc3s200a/xc3s200a_vq100 \
	xilinx/xc3s200a/STEPPINGS \
	xilinx/xc3s200a/xc3s200a_fg320 \
	xilinx/xc3s200a/xc3s200a \
	xilinx/xc3s200a/xc3s200a_ft256 \
	xilinx/xc3s400a/xc3s400a_ft256 \
	xilinx/xc3s400a/xc3s400a \
	xilinx/xc3s400a/xc3s400a_fg400 \
	xilinx/xc3s400a/STEPPINGS \
	xilinx/xc3s400a/xc3s400a_fg320 \
	xilinx/xc3s50a/xc3s50a \
	xilinx/xc3s50a/xc3s50a_ft256 \
	xilinx/xc3s50a/xc3s50a_tq144 \
	xilinx/xc3s50a/STEPPINGS \
	xilinx/xc3s50a/xc3s50a_vq100 \
	xilinx/xc3s700a/xc3s700a \
	xilinx/xc3s700a/xc3s700a_fg484 \
	xilinx/xc3s700a/STEPPINGS \
	xilinx/xc3s700a/xc3s700a_ft256 \
	xilinx/xc3s700a/xc3s700a_fg400 \
	xilinx/xc95108/STEPPINGS \
	xilinx/xc95108/xc95108 \
	xilinx/xc95108/xc95108_pc84  \
	xilinx/xc95108/xc95108_pq100  \
	xilinx/xc95108/xc95108_pq160  \
	xilinx/xc95108/xc95108_tq100  \
	xilinx/xc9536xl/STEPPINGS \
	xilinx/xc9536xl/xc9536xl_cs48 \
	xilinx/xc9536xl/xc9536xl_pc44 \
	xilinx/xc9536xl/xc9536xl_vq44 \
	xilinx/xc9536xl/xc9536xl_vq64 \
	xilinx/xc9572xl/STEPPINGS \
	xilinx/xc9572xl/xc9572xl_cs48 \
	xilinx/xc9572xl/xc9572xl_pc44 \
	xilinx/xc9572xl/xc9572xl_tq100 \
	xilinx/xc9572xl/xc9572xl_vq44 \
	xilinx/xc9572xl/xc9572xl_vq64 \
	xilinx/xc95144xl/STEPPINGS \
	xilinx/xc95144xl/xc95144xl_cs144 \
	xilinx/xc95144xl/xc95144xl_tq100 \
	xilinx/xc95144xl/xc95144xl_tq144 \
	xilinx/xc95288xl/STEPPINGS \
	xilinx/xc95288xl/xc95288xl \
	xilinx/xc95288xl/xc95288xl_bg256 \
	xilinx/xc95288xl/xc95288xl_cs280 \
	xilinx/xc95288xl/xc95288xl_fg256 \
	xilinx/xc95288xl/xc95288xl_pq208 \
	xilinx/xc95288xl/xc95288xl_tq144 \
	xilinx/xcf01s/STEPPINGS \
	xilinx/xcf01s/xcf01s \
	xilinx/xcf01s/xcf01s_vo20 \
	xilinx/xcf02s/STEPPINGS \
	xilinx/xcf02s/xcf02s \
	xilinx/xcf02s/xcf02s_vo20 \
	xilinx/xcf04s/STEPPINGS \
	xilinx/xcf04s/xcf04s \
	xilinx/xcf04s/xcf04s_vo20 \
	xilinx/xcf08p/STEPPINGS \
	xilinx/xcf08p/xcf08p \
	xilinx/xcf08p/xcf08p_fs48 \
	xilinx/xcf08p/xcf08p_vo48 \
	xilinx/xcf16p/STEPPINGS \
	xilinx/xcf16p/xcf16p \
	xilinx/xcf16p/xcf16p_fs48 \
	xilinx/xcf16p/xcf16p_vo48 \
	xilinx/xcf32p/STEPPINGS \
	xilinx/xcf32p/xcf32p \
	xilinx/xcf32p/xcf32p_fs48 \
	xilinx/xcf32p/xcf32p_vo48 \
	xilinx/xccace/STEPPINGS \
	xilinx/xccace/xccace_tq144 \
	xilinx/xcr3032xl-vq44/STEPPINGS \
	xilinx/xcr3032xl-vq44/xcr3032xl-vq44 \
	xilinx/xcr3128xl-cs144/STEPPINGS \
	xilinx/xcr3128xl-cs144/xcr3128xl-cs144 \
	xilinx/xcr3128xl-vq100/xcr3128xl-vq100 \
	xilinx/xcr3256xl-ft256/STEPPINGS \
	xilinx/xcr3256xl-ft256/xcr3256xl-ft256 \
	xilinx/xc4vfx12/STEPPINGS \
	xilinx/xc4vfx12/xc4vfx12 \
	xilinx/xc4vfx12/xc4vfx12_ff668 \
	xilinx/xc4vfx12/xc4vfx12_sf363 \
	xilinx/xc4vfx20/STEPPINGS \
	xilinx/xc4vfx20/xc4vfx20 \
	xilinx/xc4vfx20/xc4vfx20_ff672 \
	xilinx/xc4vfx40/STEPPINGS \
	xilinx/xc4vfx40/xc4vfx40 \
	xilinx/xc4vfx40/xc4vfx40_ff1152 \
	xilinx/xc4vfx40/xc4vfx40_ff672 \
	xilinx/xc4vfx60/STEPPINGS \
	xilinx/xc4vfx60/xc4vfx60 \
	xilinx/xc4vfx60/xc4vfx60_ff1152 \
	xilinx/xc4vfx60/xc4vfx60_ff672 \
	xilinx/xc4vfx100/STEPPINGS \
	xilinx/xc4vfx100/xc4vfx100 \
	xilinx/xc4vfx100/xc4vfx100_ff1152 \
	xilinx/xc4vfx100/xc4vfx100_ff1517 \
	xilinx/xc4vfx140/STEPPINGS \
	xilinx/xc4vfx140/xc4vfx140 \
	xilinx/xc4vfx140/xc4vfx140_ff1517 \
	xilinx/xc4vlx15/STEPPINGS \
	xilinx/xc4vlx15/xc4vlx15 \
	xilinx/xc4vlx15/xc4vlx15_ff668 \
	xilinx/xc4vlx15/xc4vlx15_sf363 \
	xilinx/xc4vlx25/STEPPINGS \
	xilinx/xc4vlx25/xc4vlx25 \
	xilinx/xc4vlx25/xc4vlx25_ff668 \
	xilinx/xc4vlx25/xc4vlx25_sf363 \
	xilinx/xc4vlx40/STEPPINGS \
	xilinx/xc4vlx40/xc4vlx40 \
	xilinx/xc4vlx40/xc4vlx40_ff1148 \
	xilinx/xc4vlx40/xc4vlx40_ff668 \
	xilinx/xc4vlx60/STEPPINGS \
	xilinx/xc4vlx60/xc4vlx60 \
	xilinx/xc4vlx60/xc4vlx60_ff1148 \
	xilinx/xc4vlx60/xc4vlx60_ff668 \
	xilinx/xc4vlx80/STEPPINGS \
	xilinx/xc4vlx80/xc4vlx80 \
	xilinx/xc4vlx80/xc4vlx80_ff1148 \
	xilinx/xc4vlx100/STEPPINGS \
	xilinx/xc4vlx100/xc4vlx100 \
	xilinx/xc4vlx100/xc4vlx100_ff1148 \
	xilinx/xc4vlx100/xc4vlx100_ff1513 \
	xilinx/xc4vlx160/STEPPINGS \
	xilinx/xc4vlx160/xc4vlx160 \
	xilinx/xc4vlx160/xc4vlx160_ff1148 \
	xilinx/xc4vlx160/xc4vlx160_ff1513 \
	xilinx/xc4vlx200/STEPPINGS \
	xilinx/xc4vlx200/xc4vlx200 \
	xilinx/xc4vlx200/xc4vlx200_ff1513 \
	xilinx/xc4vsx25/STEPPINGS \
	xilinx/xc4vsx25/xc4vsx25 \
	xilinx/xc4vsx25/xc4vsx25_ff668 \
	xilinx/xc4vsx35/STEPPINGS \
	xilinx/xc4vsx35/xc4vsx35 \
	xilinx/xc4vsx35/xc4vsx35_ff668 \
	xilinx/xc4vsx55/STEPPINGS \
	xilinx/xc4vsx55/xc4vsx55 \
	xilinx/xc4vsx55/xc4vsx55_ff1148 \
	xilinx/xc6slx4/STEPPINGS \
	xilinx/xc6slx4/xa6slx4 \
	xilinx/xc6slx4/xa6slx4_csg225 \
	xilinx/xc6slx4/xc6slx4 \
	xilinx/xc6slx4/xc6slx4_cpg196 \
	xilinx/xc6slx4/xc6slx4_csg225 \
	xilinx/xc6slx4/xc6slx4l \
	xilinx/xc6slx4/xc6slx4l_cpg196 \
	xilinx/xc6slx4/xc6slx4l_csg225 \
	xilinx/xc6slx4/xc6slx4l_tqg144 \
	xilinx/xc6slx4/xc6slx4_tqg144 \
	xilinx/xc6slx9/STEPPINGS \
	xilinx/xc6slx9/xa6slx9 \
	xilinx/xc6slx9/xa6slx9_csg225 \
	xilinx/xc6slx9/xa6slx9_csg324 \
	xilinx/xc6slx9/xa6slx9_ftg256 \
	xilinx/xc6slx9/xc6slx9 \
	xilinx/xc6slx9/xc6slx9_cpg196 \
	xilinx/xc6slx9/xc6slx9_csg225 \
	xilinx/xc6slx9/xc6slx9_csg324 \
	xilinx/xc6slx9/xc6slx9_ftg256 \
	xilinx/xc6slx9/xc6slx9l \
	xilinx/xc6slx9/xc6slx9l_cpg196 \
	xilinx/xc6slx9/xc6slx9l_csg225 \
	xilinx/xc6slx9/xc6slx9l_csg324 \
	xilinx/xc6slx9/xc6slx9l_ftg256 \
	xilinx/xc6slx9/xc6slx9l_tqg144 \
	xilinx/xc6slx9/xc6slx9_tqg144 \
	xilinx/xc6slx16/STEPPINGS \
	xilinx/xc6slx16/xa6slx16 \
	xilinx/xc6slx16/xa6slx16_csg225 \
	xilinx/xc6slx16/xa6slx16_csg324 \
	xilinx/xc6slx16/xa6slx16_ftg256 \
	xilinx/xc6slx16/xc6slx16 \
	xilinx/xc6slx16/xc6slx16_cpg196 \
	xilinx/xc6slx16/xc6slx16_csg225 \
	xilinx/xc6slx16/xc6slx16_csg324 \
	xilinx/xc6slx16/xc6slx16_ftg256 \
	xilinx/xc6slx16/xc6slx16l \
	xilinx/xc6slx16/xc6slx16l_cpg196 \
	xilinx/xc6slx16/xc6slx16l_csg225 \
	xilinx/xc6slx16/xc6slx16l_csg324 \
	xilinx/xc6slx16/xc6slx16l_ftg256 \
	xilinx/xc6slx25/STEPPINGS \
	xilinx/xc6slx25/xa6slx25 \
	xilinx/xc6slx25/xa6slx25_csg324 \
	xilinx/xc6slx25/xa6slx25_fgg484 \
	xilinx/xc6slx25/xa6slx25_ftg256 \
	xilinx/xc6slx25/xa6slx25t_csg324 \
	xilinx/xc6slx25/xa6slx25t_fgg484 \
	xilinx/xc6slx25/xc6slx25 \
	xilinx/xc6slx25/xc6slx25_csg324 \
	xilinx/xc6slx25/xc6slx25_fgg484 \
	xilinx/xc6slx25/xc6slx25_ftg256 \
	xilinx/xc6slx25/xc6slx25l \
	xilinx/xc6slx25/xc6slx25l_csg324 \
	xilinx/xc6slx25/xc6slx25l_fgg484 \
	xilinx/xc6slx25/xc6slx25l_ftg256 \
	xilinx/xc6slx25/xc6slx25t_csg324 \
	xilinx/xc6slx25/xc6slx25t_fgg484 \
	xilinx/xc6slx25t/STEPPINGS \
	xilinx/xc6slx25t/xa6slx25t \
	xilinx/xc6slx25t/xc6slx25t \
	xilinx/xc6slx45/STEPPINGS \
	xilinx/xc6slx45/xa6slx45 \
	xilinx/xc6slx45/xa6slx45_csg324 \
	xilinx/xc6slx45/xa6slx45_fgg484 \
	xilinx/xc6slx45/xc6slx45 \
	xilinx/xc6slx45/xc6slx45_csg324 \
	xilinx/xc6slx45/xc6slx45_csg484 \
	xilinx/xc6slx45/xc6slx45_fgg484 \
	xilinx/xc6slx45/xc6slx45_fgg676 \
	xilinx/xc6slx45/xc6slx45l \
	xilinx/xc6slx45/xc6slx45l_csg324 \
	xilinx/xc6slx45/xc6slx45l_csg484 \
	xilinx/xc6slx45/xc6slx45l_fgg484 \
	xilinx/xc6slx45/xc6slx45l_fgg676 \
	xilinx/xc6slx45t/STEPPINGS \
	xilinx/xc6slx45t/xa6slx45t \
	xilinx/xc6slx45t/xa6slx45t_csg324 \
	xilinx/xc6slx45t/xa6slx45t_fgg484 \
	xilinx/xc6slx45t/xc6slx45t \
	xilinx/xc6slx45t/xc6slx45t_csg324 \
	xilinx/xc6slx45t/xc6slx45t_csg484 \
	xilinx/xc6slx45t/xc6slx45t_fgg484 \
	xilinx/xc6slx75/STEPPINGS \
	xilinx/xc6slx75/xa6slx75 \
	xilinx/xc6slx75/xa6slx75_fgg484 \
	xilinx/xc6slx75/xa6slx75t_fgg484 \
	xilinx/xc6slx75/xc6slx75 \
	xilinx/xc6slx75/xc6slx75_csg484 \
	xilinx/xc6slx75/xc6slx75_fgg484 \
	xilinx/xc6slx75/xc6slx75_fgg676 \
	xilinx/xc6slx75/xc6slx75l \
	xilinx/xc6slx75/xc6slx75l_csg484 \
	xilinx/xc6slx75/xc6slx75l_fgg484 \
	xilinx/xc6slx75/xc6slx75l_fgg676 \
	xilinx/xc6slx75/xc6slx75t_csg484 \
	xilinx/xc6slx75/xc6slx75t_fgg484 \
	xilinx/xc6slx75/xc6slx75t_fgg676 \
	xilinx/xc6slx75t/STEPPINGS \
	xilinx/xc6slx75t/xa6slx75t \
	xilinx/xc6slx75t/xc6slx75t \
	xilinx/xc6slx100/STEPPINGS \
	xilinx/xc6slx100/xc6slx100 \
	xilinx/xc6slx100/xc6slx100_csg484 \
	xilinx/xc6slx100/xc6slx100_fgg484 \
	xilinx/xc6slx100/xc6slx100_fgg676 \
	xilinx/xc6slx100/xc6slx100l \
	xilinx/xc6slx100/xc6slx100l_csg484 \
	xilinx/xc6slx100/xc6slx100l_fgg484 \
	xilinx/xc6slx100/xc6slx100l_fgg676 \
	xilinx/xc6slx100/xc6slx100t_csg484 \
	xilinx/xc6slx100/xc6slx100t_fgg484 \
	xilinx/xc6slx100/xc6slx100t_fgg676 \
	xilinx/xc6slx100/xc6slx100t_fgg900 \
	xilinx/xc6slx100t/STEPPINGS \
	xilinx/xc6slx100t/xc6slx100t \
	xilinx/xc6slx150/STEPPINGS \
	xilinx/xc6slx150/xc6slx150 \
	xilinx/xc6slx150/xc6slx150_csg484 \
	xilinx/xc6slx150/xc6slx150_fgg484 \
	xilinx/xc6slx150/xc6slx150_fgg676 \
	xilinx/xc6slx150/xc6slx150_fgg900 \
	xilinx/xc6slx150/xc6slx150l \
	xilinx/xc6slx150/xc6slx150l_csg484 \
	xilinx/xc6slx150/xc6slx150l_fgg484 \
	xilinx/xc6slx150/xc6slx150l_fgg676 \
	xilinx/xc6slx150/xc6slx150l_fgg900 \
	xilinx/xc6slx150/xc6slx150t_csg484 \
	xilinx/xc6slx150/xc6slx150t_fgg484 \
	xilinx/xc6slx150/xc6slx150t_fgg676 \
	xilinx/xc6slx150/xc6slx150t_fgg900 \
	xilinx/xc2vp4/STEPPINGS \
	xilinx/xc2vp4/xc2vp4 \
	xilinx/xc6slx150t/STEPPINGS \
	xilinx/xc6slx150t/xc6slx150t

