#
# $Id$
#
# Copyright (C) 2003 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2003.
#

include $(top_srcdir)/Makefile.rules

noinst_LIBRARIES = libbus.a

libbus_a_SOURCES = \
	buses.c \
	buses.h \
	au1500.c \
	bcm1250.c \
	ejtag.c \
	bf533_stamp.c \
	bf533_ezkit.c \
	ixp425.c \
	lh7a400.c \
	mpc824x.c \
	mpc5200.c \
	ppc440gx_ebc8.c \
	ppc405ep.c \
	pxa2x0.c \
	sa1110.c \
	s3c4510x.c \
	sh7727.c \
	sh7750r.c \
	sh7751r.c \
	h7202.c \
	slsup3.c \
	tx4925.c \
	jopcyc.c \
	sharc21065l.c \
	zefant-xs3.c
