#
# Copyright (C) 2011 Analog Devices, Inc.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#

include $(top_srcdir)/Makefile.rules

EXTRA_DIST = \
	fjmem_config_pack_cyclone-p.vhd \
	fjmem_config_pack_spartan3-p.vhd \
	fjmem_config_pack_spartan6-p.vhd \
	fjmem_core.vhd \
	fjmem_cyclone.vhd \
	fjmem_pack-p.vhd \
	fjmem_spartan3.vhd \
	fjmem_spartan6.vhd \
	generic_ram_ena.vhd \
	README

