#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

pkginclude_HEADERS = \
	bfin.h \
	bitmask.h \
	bitops.h \
	bsbit.h \
	bsdl.h \
	bsdl_mode.h \
	bssignal.h \
	bus.h \
	bus_driver.h \
	cable.h \
	chain.h \
	cmd.h \
	data_register.h \
	error.h \
	fclock.h \
	flash.h \
	gettext.h \
	jim.h \
	jtag.h \
	log.h \
	params.h \
	parport.h \
	parse.h \
	part.h \
	part_instruction.h \
	pld.h \
	pod.h \
	tap_register.h \
	tap_state.h \
	tap.h \
	svf.h \
	types.h \
	usbconn.h

nodist_pkginclude_HEADERS = \
	urjtag.h
